# buffer_mcu

./: CMakeLists.txt  CMakePresets.json  README.md
include/buffer/: buffer.h
source/: buffer.c
test/unit_test/: CMakeLists.txt
test/unit_test/suites/: ut_buf_clear.cpp  ut_buf_compare.cpp  ut_buf_fill_pattern.cpp  ut_buf_get_free_size.cpp  ut_buf_get_read_write.cpp  ut_buf_get_size.cpp  ut_buf_get_to_read_count.cpp  ut_buf_get_used_size.cpp  ut_buf_init_empty.cpp  ut_buf_init_full.cpp  ut_buf_is_full.cpp  ut_buf_make_view_full.cpp  ut_buf_make_view_to_read.cpp  ut_buf_reset.cpp  ut_buf_reset_read_index.cpp  ut_buf_set_all_read.cpp  ut_buf_set_size.cpp  ut_buf_write_copy.cpp
